--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
   <!-- ★表示スロット（トグル）はここに移動：スクロールで流れる -->
   <section class="optionsPanel">
-    <p class="optionsTitle">表示する項目（CSVの列から自動生成）</p>
+    <p class="optionsTitle">表示する項目（3つまで）</p>
     <div class="toggles" id="toggles"></div>
   </section>
 
